--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -22,6 +23,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.21.4",
     "eslint-config-prettier": "^8.8.0",
     "sass": "^1.62.0"
   }
