--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
+      "@services": ["./src/services"],
+      "@hooks": ["./src/hooks"],
+      "@utils": ["./src/utils"],
+      "@interfaces": ["./src/interfaces"],
+      "@dto": ["./src/dto"],
+      
+      "@services/*": ["./src/services/*"],
       "@configs/*": ["./src/configs/*"],
       "@styles/*": ["./src/styles/*"],
       "@assets/*": ["./src/assets/*"],
@@ -23,11 +30,6 @@
       "@features/*": ["./src/features/*"],
       "@redux/*": ["./src/redux/*"],
 
-      "@hooks": ["./src/hooks"],
-      "@utils": ["./src/utils"],
-      "@interfaces": ["./src/interfaces"],
-      "@dto": ["./src/dto"],
-      
       "@/*": ["./src/*"]
     }
   },
