--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "axios-mock-adapter": "^1.21.4",
     "eslint-config-prettier": "^8.8.0",
     "sass": "^1.62.0"
