--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "web-client",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "axios": "^1.3.5",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.5",
-    "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^7.0.0",
-    "axios-mock-adapter": "^1.21.4",
-    "eslint-config-prettier": "^8.8.0",
-    "sass": "^1.62.0"
-  }
+    "name": "web-client",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.9.3",
+        "@types/js-cookie": "^3.0.3",
+        "@types/node": "18.15.11",
+        "@types/react": "18.0.35",
+        "@types/react-dom": "18.0.11",
+        "axios": "^1.3.5",
+        "eslint": "8.38.0",
+        "eslint-config-next": "13.3.0",
+        "js-cookie": "^3.0.5",
+        "next": "13.3.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-redux": "^8.0.5",
+        "typescript": "5.0.4"
+    },
+    "devDependencies": {
+        "@svgr/webpack": "^7.0.0",
+        "axios-mock-adapter": "^1.21.4",
+        "eslint-config-prettier": "^8.8.0",
+        "sass": "^1.62.0"
+    }
 }
