updated: configs, services, axios

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,13 @@
             "@services": ["./src/services"],
             "@utils": ["./src/utils"],
             "@interfaces": ["./src/interfaces"],
+            "@api": ["./src/api"],
             "@dto": ["./src/dto"],
             "@hooks/*": ["./src/hooks/*"],
             "@services/*": ["./src/services/*"],
             "@configs/*": ["./src/configs/*"],
             "@styles/*": ["./src/styles/*"],
             "@assets/*": ["./src/assets/*"],
-            "@api/*": ["./src/api/*"],
             "@components/*": ["./src/components/*"],
             "@features/*": ["./src/features/*"],
             "@redux/*": ["./src/redux/*"],
